# mothprobe

./: .env.example  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  IMPLEMENTATION.md  LICENSE  README.md  TODO.md  art.txt  test.js
client/: README.md  package-lock.json  package.json  tsconfig.json
client/data/: history.bak.json  history.json
client/data/themes/: catppuccin.json  default.json  monokai.json  tokyo-night.json
client/src/: audit.ts  bin.ts  fileContext.ts  inputParser.ts  main.ts  main.tsx  mcpClient.ts  shellRunner.ts  store.ts  themeManager.ts  types.ts
client/src/components/: ChatArea.tsx  Divider.tsx  Header.tsx  HelpPanel.tsx  InputBar.tsx  LLMSetupModal.tsx  MarkdownRenderer.tsx  ModelPickerModal.tsx  ReasoningModeModal.tsx  ResumeSessionModal.tsx
client/src/types/: gradient-string.d.ts
cmake/toolchains/android/: toolchain.cmake
cmake/toolchains/linux/: toolchain.cmake
cmake/toolchains/macos/: toolchain.cmake
data/.mothprobe/prompts/: system.md
docs/: Agents.md  Architecture.md  MOTHON_CPP.md  README.md  Usage.md  _sidebar.md  index.html
docs/adr/: 0001-mothon-cpp.md
src/: main.cpp
src/core/: audit.cpp  audit.hpp  config.cpp  config.hpp  logger.cpp  logger.hpp  shell_runner.cpp  shell_runner.hpp
src/mcp/: agent_registry.cpp  agent_registry.hpp  chat_memory.cpp  chat_memory.hpp  json_rpc.cpp  json_rpc.hpp  main_mcp.cpp  mcp_client_registry.cpp  mcp_client_registry.hpp  scope_validator.cpp  scope_validator.hpp  server.cpp  server.hpp
src/mcp/llm/: claude_adapter.cpp  claude_adapter.hpp  gemini_adapter.cpp  gemini_adapter.hpp  groq_adapter.cpp  groq_adapter.hpp  http_client.cpp  http_client.hpp  ollama_adapter.cpp  ollama_adapter.hpp  openai_compatible_adapter.cpp  openai_compatible_adapter.hpp  openrouter_adapter.cpp  openrouter_adapter.hpp  provider_factory.cpp  provider_factory.hpp  provider_interface.hpp
src/mothon/protocol/: upstream.cpp  upstream.hpp
src/mothon/tools/: tool_registry.cpp  tool_registry.hpp
src/mothprobe/: version.hpp
tests/: test.cpp  test_llm.cpp
